# latentlens

./: .gitignore  Pipfile  README.md  app.py  pyproject.toml  reproduce_score.py  requirements.txt
.streamlit/: config.toml
core/: client_factory.py  connectors.py  datasets.py  math_engine.py
docs/: concepts.md
utils/: visuals.py
